refactoring to pull out some common code and using match in some places instead of unwrap to remove any potential issues

--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                       <li class="nav-item">
                         <a class="nav-link" href="#">
                           <i class="fas fa-mouse-pointer"></i>
-                          Buttons
+                          I'm not sure what to put here. I may keep it our I may not
                         </a>
                       </li>
                       
@@ -57,11 +57,11 @@
                   </div>
               <div class="card" style="width: 18rem;">
                   <div class="card-body">
-                    <h5 class="card-title">Buttons</h5>
-                    <p class="card-text" id="btn-info-text">Examples that illustrate how to handle button events.</p>
+                    <h5 class="card-title">Click</h5>
+                    <p class="card-text" id="btn-info-text">Examples that illustrate how to handle click events.</p>
                     <p class="card-text" id="btn-handler-space"></p>
                     <button type="button" id="btn-rs-click" class="btn btn btn-outline-success btn-md">Rust Click</button>
-                    <button type="button" id="btn-js-click" class="btn btn btn-outline-success btn-md">Rust Click</button>
+                    <button type="button" id="btn-js-click" class="btn btn btn-outline-success btn-md">JS Click</button>
                   </div>
                 </div>
                 </main>
